# ImageProcessingProgect

./: .gitignore  CMakeLists.txt  SatImageManager.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
QtAwesome/: QtAwesome.cpp  QtAwesome.h  QtAwesome.qrc
controllers/: imagemergingworker.cpp  imagemergingworker.h  workspacecontroller.cpp  workspacecontroller.h
controllers/imageSnap/: webpageconnector.cpp  webpageconnector.h
helpers/: imagehelper.cpp  imagehelper.h  viewhelper.cpp  viewhelper.h
lib/: slidingstackedwidget.cpp  slidingstackedwidget.h  vent.cpp  vent.h
lib/model/: abstractitem.cpp  abstractitem.h  matmodel.cpp  matmodel.h  matmodelitem.cpp  matmodelitem.h  standardmodel.cpp  standardmodel.h
lib/model/image/: imageparameter.cpp  imageparameter.h  imageparametersmodel.cpp  imageparametersmodel.h  standardimageitem.cpp  standardimageitem.h  standardimagemodel.cpp  standardimagemodel.h
lib/views/: imageitemdelegate.cpp  imageitemdelegate.h  materialbutton.cpp  materialbutton.h  singleimageview.cpp  singleimageview.h
modules/imageSnap/: imagesnapcontroller.cpp  imagesnapcontroller.h
stylesheets/: stylesheet.css
views/: fileslistwidget.cpp  fileslistwidget.h  tasksview.cpp  tasksview.h  workspace.cpp  workspace.h
views/imageMerging/: imagemergingcontroller.cpp  imagemergingcontroller.h  imagemerginginputdata.h  imagemergingprocessor.cpp  imagemergingprocessor.h  imagemergingview.cpp  imagemergingview.h  mergeresultview.cpp  mergeresultview.h
views/imageSnap/: gulpfile.js  imagesnapview.cpp  imagesnapview.h  index.html  package.json  webpack.config.js
views/imageSnap/js/src/: main.js
